# GooseForce

./: .env  pyproject.toml
src/thegooseforce/: __init__.py  auth.py  server.py
